--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@tailwindcss/postcss": "^4.1.18",
-    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.1.18",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -41,6 +39,7 @@
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.0",
     "@types/jasmine": "^5.1.13",
+    "autoprefixer": "^10.4.23",
     "jasmine": "^5.13.0",
     "jasmine-core": "^5.13.0",
     "jsdom": "^27.1.0",
@@ -49,6 +48,8 @@
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
